WIP startScripts working with openjfx